Bug 832998:  Fix a backwards OMTA-throttling-enabled check, to fix performance regression on the non-OMTA-throttling case.  r=nrc  approval-mozilla-aurora=lsblakk